# NexusLLM

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHAGENLOG.md  README.md  index.html  justfile  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: deploy_docs.yml  pull_request_workflow.yml
LLMs/: index.html
NexusLLM/: pyproject.toml
agents/: index.html
configuration/: config.toml  config.yaml
deepeval/: index.html
docs/: LLM Evaluation.md  LLMOps_theory.md  LLMs.md  agents.md  agents_theory.md  deepeval.md  embeddings.md  embeddings_theory.md  evaluation.md  fine_tuning.md  fine_tuning_theory.md  google_llms.md  hugging_face.md  index.html  llm_models_theory.md  llm_theory.md  mkdocs.yml  search.html  tokenizers.md  transformers.md  transformers_theory.md  vector_search.md  vector_search_theory.md
docs/LLMOps/: index.html
docs/fine_tuning/: index.html
docs/google_llms/: index.html
docs/search/: search_index.json
docs/tokenizers/: index.html
docs/transformers/: index.html
docs/vector_search/: index.html
documentation/: mkdocs.yml
documentation/docs/: LLMOps.md  LLMs.md  agents.md  deepeval.md  embeddings.md  evaluation.md  google_llms.md  index.md  tokenizers.md  transformers.md
embeddings/: index.html
evaluation/: index.html
notebooks/agents/: agents_experimentation.ipynb  langchain.ipynb  sample.db
notebooks/character_based_llm/: character_based_llm.md  transformer.ipynb
notebooks/embeddings/: applications.ipynb  embeddings_experimentation.ipynb  embeddings_with_autotokenizer.ipynb  fine_tuning.ipynb  transformers_embeddings.ipynb
notebooks/encoding/: positional_encoding.ipynb
notebooks/google/: agents.ipynb  prompting.ipynb
notebooks/hugging_face/: 0_basic_usage.ipynb
notebooks/langchain/: experimentation.ipynb  prompting.ipynb
notebooks/llama_2/: fine_tuning_lora.ipynb
notebooks/mistral/: fine_tune_dpo.ipynb
notebooks/open_llama_qlora/: open_llama_qlora.ipynb  open_llama_qlora.md
notebooks/small_language_models/: smollm3.ipynb
notebooks/tokenizers/: tokenizers_experimentation.ipynb
scripts/: pylint_lint.sh  scripts_template.sh  sqlfluff_fix_and_lint.sh
tests/: placeholder_test.py
