[tool.poetry]
name = "llm-experimentation"
version = "1.0.1"
description = "A repository containing research and experimentations with LLMs"
authors = ["Simone Porreca <porrecasimone@gmail.com>", "Ali Abbas Jaffri <megahertz888@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.13"
jupyterlab = "^4.3.6"
sentence-transformers = "^4.1.0"
ipywidgets = "^8.1.6"
transformers = "^4.51.3"
datasets = "^3.5.0"
hf-xet = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
