[project]
name = "nexusllm"
version = "1.0.2"
description = "NexusLLM is a GitHub repository dedicated to exploring various experiments related to Language Model Models (LMM). From fine-tuning and instruction-tuning to RAG and agent-based systems, it offers a diverse range of experiments and insights for researchers and enthusiasts interested in natural language processing and AI innovation."
authors = [
  {name = "Simone Porreca", email = "porrecasimone@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.11",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
]
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
keywords = ["AI", "Artificial Intelligence", "Machine Learning", "ML", "Python", "LLM", "Agent", "Transformer", "Embedding"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Documentation = "https://volscente.github.io/NexusLLM/"
Repository = "https://github.com/Volscente/NexusLLM"
Backlog = "https://github.com/users/Volscente/projects/11/views/1"
Changelog = "https://github.com/Volscente/NexusLLM/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.12.3",
    "sqlfluff>=3.4.2",
]

[tool.pytest.ini_options]

# Filter deprecation warning from google-cloud-bigquery
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore:BigQuery Storage module not found, fetch data with the REST endpoint instead:UserWarning"
]
# Set the PYTHONPATH
pythonpath = [
  "src"
]
# Read from the .env file
env_files = [".env"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]  # E=pycodestyle, F=pyflakes
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"